react-ssr-cdk/cdk-setup-template.yaml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/Resource
  VPCasteriskSubnet1SubnetEE53BCBC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: asterisk
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet1
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/Subnet
  VPCasteriskSubnet1RouteTable23B73BA2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet1
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/RouteTable
  VPCasteriskSubnet1RouteTableAssociationFD2182F2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet1RouteTable23B73BA2
      SubnetId:
        Ref: VPCasteriskSubnet1SubnetEE53BCBC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/RouteTableAssociation
  VPCasteriskSubnet1DefaultRoute377544B7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet1RouteTable23B73BA2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/DefaultRoute
  VPCasteriskSubnet2Subnet7959E1B2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: asterisk
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/Subnet
  VPCasteriskSubnet2RouteTable01067F80:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/RouteTable
  VPCasteriskSubnet2RouteTableAssociation781F3620:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet2RouteTable01067F80
      SubnetId:
        Ref: VPCasteriskSubnet2Subnet7959E1B2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/RouteTableAssociation
  VPCasteriskSubnet2DefaultRoute9650F4DB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet2RouteTable01067F80
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/DefaultRoute
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/VPCGW
  SecurityGroupDD263621:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH (TCP port 22) in
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow SSH Access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/SecurityGroup/Resource
  ec2Role38AB65C0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/ec2Role/Resource
  AKeyPairEC2KeyPairakeypairC17394BB:
    Type: Custom::EC2-Key-Pair
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - EC2KeyNameManagerLambdaBE629145
          - Arn
      Name: a-key-pair
      Description: This is a Key Pair
      KmsPrivate: alias/aws/secretsmanager
      KmsPublic: alias/aws/secretsmanager
      PublicKey: ""
      StorePublicKey: true
      ExposePublicKey: false
      PublicKeyFormat: OPENSSH
      RemoveKeySecretsAfterDays: 0
      SecretPrefix: ec2-ssh-key/
      StackName: ReactSsrCdkStack
      Tags:
        CreatedByCfnCustomResource: CFN::Resource::Custom::EC2-Key-Pair
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/A-Key-Pair/EC2-Key-Pair-a-key-pair/Default
  EC2KeyPairManagerPolicyEBBC1576:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ec2:DescribeKeyPairs
              - secretsmanager:ListSecrets
            Effect: Allow
            Resource: "*"
          - Action:
              - ec2:CreateKeyPair
              - ec2:CreateTags
              - ec2:ImportKeyPair
            Condition:
              StringLike:
                aws:RequestTag/CreatedByCfnCustomResource: CFN::Resource::Custom::EC2-Key-Pair
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - :ec2:*:*:key-pair/*
          - Action:
              - ec2:CreateTags
              - ec2:DeleteKeyPair
              - ec2:DeleteTags
            Condition:
              StringLike:
                ec2:ResourceTag/CreatedByCfnCustomResource: CFN::Resource::Custom::EC2-Key-Pair
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - :ec2:*:*:key-pair/*
          - Action:
              - secretsmanager:CreateSecret
              - secretsmanager:TagResource
            Condition:
              StringLike:
                aws:RequestTag/CreatedByCfnCustomResource: CFN::Resource::Custom::EC2-Key-Pair
            Effect: Allow
            Resource: "*"
          - Action:
              - secretsmanager:DeleteResourcePolicy
              - secretsmanager:DeleteSecret
              - secretsmanager:DescribeSecret
              - secretsmanager:GetResourcePolicy
              - secretsmanager:GetSecretValue
              - secretsmanager:ListSecretVersionIds
              - secretsmanager:PutResourcePolicy
              - secretsmanager:PutSecretValue
              - secretsmanager:RestoreSecret
              - secretsmanager:UntagResource
              - secretsmanager:UpdateSecret
              - secretsmanager:UpdateSecretVersionStage
            Condition:
              StringLike:
                secretsmanager:ResourceTag/CreatedByCfnCustomResource: CFN::Resource::Custom::EC2-Key-Pair
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      Description: Used by Lambda CFN-Resource-Custom-EC2-Key-Pair, which is a custom CFN resource, managing EC2 Key Pairs
      ManagedPolicyName: ReactSsrCdkStack-CFN-Resource-Custom-EC2-Key-Pair
      Path: /
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/EC2-Key-Pair-Manager-Policy/Resource
  EC2KeyPairManagerRoleB243C519:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      Description: Used by Lambda CFN-Resource-Custom-EC2-Key-Pair, which is a custom CFN resource, managing EC2 Key Pairs
      ManagedPolicyArns:
        - Ref: EC2KeyPairManagerPolicyEBBC1576
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      RoleName: ReactSsrCdkStack-CFN-Resource-Custom-EC2-Key-Pair
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/EC2-Key-Pair-Manager-Role/Resource
  EC2KeyNameManagerLambdaBE629145:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: 4b53adc667dcab419bec9e03553dce125d10f1d9c6ac1d2c082001b9332f150f.zip
      Role:
        Fn::GetAtt:
          - EC2KeyPairManagerRoleB243C519
          - Arn
      Description: "Custom CFN resource: Manage EC2 Key Pairs"
      FunctionName: ReactSsrCdkStack-CFN-Resource-Custom-EC2-Key-Pair
      Handler: index.handler
      Runtime: nodejs14.x
      Timeout: 180
    DependsOn:
      - EC2KeyPairManagerRoleB243C519
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/EC2-Key-Name-Manager-Lambda/Resource
      aws:asset:path: asset.4b53adc667dcab419bec9e03553dce125d10f1d9c6ac1d2c082001b9332f150f.zip
      aws:asset:is-bundled: false
      aws:asset:property: Code
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: ec2Role38AB65C0
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t4g.micro
      KeyName:
        Fn::GetAtt:
          - AKeyPairEC2KeyPairakeypairC17394BB
          - KeyPairName
      SecurityGroupIds:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
      SubnetId:
        Ref: VPCasteriskSubnet1SubnetEE53BCBC
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/Instance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - ec2Role38AB65C0
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/Instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/2VQTW/CMAz9LdxLtoK0nUulIQ7TqjJxRW5qukDroNgZQhX/fenXqmknv/di+714pVav6nkBN17q8rKsTaHavYC+REE6tqhXqj1cdZSe6JClUeaL2ui9Lwil02aUWy/4CUWNsz5rCbPVBsRY+m3uwI4EXejcguAN7qPNyBIJQb4aJIn2qL0zct8666+9wR9hRyxAelw54EdkoFFtbodEfX0HggrLzIZP9Gb/hGk6c/Zk6rCkhqYoQbVvnvQUf8KPiNdHYEZhlXQlcLXx+oKyAQ7DObL1rsvlWWwz05Bnwv1gOHllqOoeMnDQYDhLRz68XH1/39RSaQZTsiWqMz99xy8qXqt4cWZjls6TmAZVPtQf5vikp9kBAAA=
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-arm64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Outputs:
  IPAddress:
    Value:
      Fn::GetAtt:
        - InstanceC1063A87
        - PublicIp
  DownloadKeyCommand:
    Value: aws secretsmanager get-secret-value --secret-id ec2-ssh-key/cdk-keypair/private --query SecretString --output text > cdk-key.pem && chmod 400 cdk-key.pem
  sshcommand:
    Value:
      Fn::Join:
        - ""
        - - ssh -i cdk-key.pem -o IdentitiesOnly=yes ec2-user@
          - Fn::GetAtt:
              - InstanceC1063A87
              - PublicIp
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
