react-ssr-cdk/template.yaml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/Resource
  VPCasteriskSubnet1SubnetEE53BCBC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: asterisk
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet1
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/Subnet
  VPCasteriskSubnet1RouteTable23B73BA2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet1
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/RouteTable
  VPCasteriskSubnet1RouteTableAssociationFD2182F2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet1RouteTable23B73BA2
      SubnetId:
        Ref: VPCasteriskSubnet1SubnetEE53BCBC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/RouteTableAssociation
  VPCasteriskSubnet1DefaultRoute377544B7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet1RouteTable23B73BA2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet1/DefaultRoute
  VPCasteriskSubnet2Subnet7959E1B2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: asterisk
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/Subnet
  VPCasteriskSubnet2RouteTable01067F80:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC/asteriskSubnet2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/RouteTable
  VPCasteriskSubnet2RouteTableAssociation781F3620:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet2RouteTable01067F80
      SubnetId:
        Ref: VPCasteriskSubnet2Subnet7959E1B2
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/RouteTableAssociation
  VPCasteriskSubnet2DefaultRoute9650F4DB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCasteriskSubnet2RouteTable01067F80
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/asteriskSubnet2/DefaultRoute
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/VPC
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/VPC/VPCGW
  SecurityGroupDD263621:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH (TCP port 22) in
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow SSH Access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/SecurityGroup/Resource
  ec2Role38AB65C0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/ec2Role/Resource
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: ec2Role38AB65C0
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t4g.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
      SubnetId:
        Ref: VPCasteriskSubnet1SubnetEE53BCBC
      Tags:
        - Key: Name
          Value: ReactSsrCdkStack/Instance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - ec2Role38AB65C0
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/Instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/1WPQW+DMAyFf0vvIRtM6s4Vh6qnIph6nUxwNbfgoMRpVSH++2ChYzv5+cuL/Zzp7F2/buDuE9Nck5ZqPVQC5qom9DmgyfRw6o3Kz3wqclWEuiVThZpRZraq0gbBD6hbXPnKdt5bQyBk+dc8iwMLusm5B8E7PJY1S7eTKchXhyyqQhMcyWPvbOh/FvwDB/YCbJaRUY+KoNNDaWOiZ30+F86eqcVxVCV6G1z8XICDDqdMc3MM0od43B9Lbrmh+ZBRsW1QX/zLLd3q9E2nm4snSlxgoQ51Ges3dyAYU2IBAAA=
    Metadata:
      aws:cdk:path: ReactSsrCdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-arm64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Outputs:
  IPAddress:
    Value:
      Fn::GetAtt:
        - InstanceC1063A87
        - PublicIp
  DownloadKeyCommand:
    Value: aws secretsmanager get-secret-value --secret-id ec2-ssh-key/cdk-keypair/private --query SecretString --output text > cdk-key.pem && chmod 400 cdk-key.pem
  sshcommand:
    Value:
      Fn::Join:
        - ""
        - - ssh -i cdk-key.pem -o IdentitiesOnly=yes ec2-user@
          - Fn::GetAtt:
              - InstanceC1063A87
              - PublicIp
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
